deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flink-kubernetes-dashboard
  namespace: flink-operator
  labels:
    app: flink-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flink-kubernetes
  template:
    metadata:
      labels:
        app: flink-kubernetes
    spec:
      serviceAccount: flink-kubernetes-api
      containers:
        - name: flink-kubernetes-api
          image: harbor.knada.rancher.kosmos.fr/public/flink-kubernetes-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
        - name: flink-kubernetes-dashboard
          image: harbor.knada.rancher.kosmos.fr/public/flink-kubernetes-dashboard:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: flink-kubernetes-dashboard
  namespace: flink-operator
spec:
  selector:
    app: flink-kubernetes
  ports:
    - name: flink-kubernetes-dashboard
      port: 3000
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flink-kubernetes-dashboard
  namespace: flink-operator
spec:
  ingressClassName: nginx
  rules:
    - host: flink-kubernetes-dashboard.knada.rancher.kosmos.fr
      http:
        paths:
          - backend:
              service:
                port:
                  number: 3000
                name: flink-kubernetes-dashboard
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - flink-kubernetes-dashboard.knada.rancher.kosmos.fr
      secretName: wildcard-knada-rancher-kosmos-fr-tls
